name:                NotesExporter
version:             0.1.0.0
synopsis:            Export data from OS X's Notes.app
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Anthony Cowley
maintainer:          acowley@gmail.com
copyright:           Copyright (C) 2014 Anthony Cowley
category:            Database
build-type:          Simple
cabal-version:       >=1.10

executable NotesExporter
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8,
                       sqlite-simple, text, directory, formatting, filepath
  hs-source-dirs:      src
  default-language:    Haskell2010
